--- a/package.json
+++ b/package.json
@@ -40,5 +40,8 @@
     "sass-embedded": "^1.79.4",
     "tailwindcss": "^3.4.13",
     "vite": "^5.4.8"
+  },
+  "engines": {
+    "node": "18.20.4"
   }
 }
